--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.27.2",
     "daisyui": "^2.17.0",
     "pinia": "^2.0.16",
+    "theme-change": "^2.2.0",
     "vee-validate": "^4.6.2",
     "vue": "^3.2.25",
     "vue-router": "4",
