--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "ztm-face-recognition",
   "private": true,
   "version": "0.0.0",
+  "engines": {
+    "node": "16.x",
+    "yarn": "1.x"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
